--- a/public/junk-removal.html
+++ b/public/junk-removal.html
@@ -1,13 +1,14 @@
 <!-- File: /public/junk-removal.html -->
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Junk Removal | Coastal Junk Removal</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/css/styles.css" />
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Junk Removal | Coastal Junk Removal</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<link href="/css/styles.css" rel="stylesheet"/>
+<style>
     body {
       background: #000;
       color: #fff;
@@ -144,48 +145,46 @@
   </style>
 </head>
 <body>
+
 <header class="navbar">
-  <div class="logo">Coastal Junk Removal</div>
-  <div class="hamburger" onclick="toggleMenu()">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-  <nav class="nav-links" id="navMenu">
-    <a href="/index.html">Home</a>
-    <a href="/junk-removal.html">Junk Removal</a>
-    <a href="/moving-services.html">Moving Services</a>
-    <a href="/contact.html">Contact</a>
-  </nav>
+<a class="logo" href="/index.html">
+<img alt="Coastal Junk Removal" src="/assets/logo.png" style="height:40px;"/>
+</a>
+<div class="hamburger" onclick="toggleMenu()">
+<span></span><span></span><span></span>
+</div>
+<nav class="nav-links" id="navMenu">
+<a href="/index.html">Home</a>
+<a href="/junk-removal.html">Junk Removal</a>
+<a href="/moving-services.html">Moving Services</a>
+<a href="/contact.html">Contact</a>
+</nav>
 </header>
 
 <section class="hero">
-  <div class="hero-content">
-    <h1>Junk Removal Services</h1>
-    <p>Professional, fast, and respectful junk removal for homes, offices, and estates across Coastal Virginia.</p>
-    <a href="/contact.html" class="cta-button">Schedule Service</a>
-  </div>
+<div class="hero-content">
+<h1>Junk Removal Services</h1>
+<p>Professional, fast, and respectful junk removal for homes, offices, and estates across Coastal Virginia.</p>
+<a class="cta-button" href="/contact.html">Schedule Service</a>
+</div>
 </section>
-
 <section class="services">
-  <div class="service">
-    <h2>What We Offer</h2>
-    <p>We specialize in full-service junk removal tailored for residential and commercial needs. Our trained team ensures fast, courteous, and careful service, from single-item pickups to full estate cleanouts.</p>
-    <ul>
-      <li>Estate Cleanouts</li>
-      <li>Garage, Basement & Attic Clearouts</li>
-      <li>Office & Commercial Cleanouts</li>
-      <li>Appliance & Furniture Removal</li>
-      <li>Eco-Friendly Donations & Disposal</li>
-    </ul>
-    <a href="/contact.html" class="cta-button">Book Junk Removal</a>
-  </div>
+<div class="service">
+<h2>What We Offer</h2>
+<p>We specialize in full-service junk removal tailored for residential and commercial needs. Our trained team ensures fast, courteous, and careful service, from single-item pickups to full estate cleanouts.</p>
+<ul>
+<li>Estate Cleanouts</li>
+<li>Garage, Basement &amp; Attic Clearouts</li>
+<li>Office &amp; Commercial Cleanouts</li>
+<li>Appliance &amp; Furniture Removal</li>
+<li>Eco-Friendly Donations &amp; Disposal</li>
+</ul>
+<a class="cta-button" href="/contact.html">Book Junk Removal</a>
+</div>
 </section>
-
 <footer>
-  <p>&copy; 2024 Coastal Junk Removal | Clean Spaces, Professional Service</p>
+<p>© 2024 Coastal Junk Removal | Clean Spaces, Professional Service</p>
 </footer>
-
 <script>
 function toggleMenu() {
   document.getElementById('navMenu').classList.toggle('active');
