--- a/public/moving-services.html
+++ b/public/moving-services.html
@@ -1,13 +1,14 @@
 <!-- File: /public/moving-services.html -->
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Moving Services | Coastal Junk Removal</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/css/styles.css" />
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Moving Services | Coastal Junk Removal</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<link href="/css/styles.css" rel="stylesheet"/>
+<style>
     header.navbar {
       display: flex;
       justify-content: space-between;
@@ -72,38 +73,37 @@
     }
   </style>
 </head>
- <body>
-<header class="navbar">
-  <div class="logo">Coastal Junk Removal</div>
-  <div class="hamburger" onclick="toggleMenu()">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
+<body>
 
-   <nav class="nav-links" id="navMenu">
-    <a href="/index.html">Home</a>
-    <a href="/junk-removal.html">Junk Removal</a>
-    <a href="/moving-services.html">Moving Services</a>
-    <a href="/contact.html">Contact</a>
-   </nav>
+<header class="navbar">
+<a class="logo" href="/index.html">
+<img alt="Coastal Junk Removal" src="/assets/logo.png" style="height:40px;"/>
+</a>
+<div class="hamburger" onclick="toggleMenu()">
+<span></span><span></span><span></span>
+</div>
+<nav class="nav-links" id="navMenu">
+<a href="/index.html">Home</a>
+<a href="/junk-removal.html">Junk Removal</a>
+<a href="/moving-services.html">Moving Services</a>
+<a href="/contact.html">Contact</a>
+</nav>
 </header>
 
 <main>
-  <!-- Add your actual moving service content here -->
-  <section style="padding:2rem;">
-    <h1>Professional Moving Services</h1>
-    <p>We provide tailored, full-service moving for residential and commercial clients across Coastal Virginia. Our experienced team handles your valuables with precision and professionalism.</p>
-    <ul>
-      <li>Studio & Apartment Moves</li>
-      <li>Office Relocations</li>
-      <li>Estate & Long-Distance Moves</li>
-      <li>Storage Unit Clearouts</li>
-    </ul>
-    <a href="/contact.html" class="cta-button">Book Moving</a>
-  </section>
+<!-- Add your actual moving service content here -->
+<section style="padding:2rem;">
+<h1>Professional Moving Services</h1>
+<p>We provide tailored, full-service moving for residential and commercial clients across Coastal Virginia. Our experienced team handles your valuables with precision and professionalism.</p>
+<ul>
+<li>Studio &amp; Apartment Moves</li>
+<li>Office Relocations</li>
+<li>Estate &amp; Long-Distance Moves</li>
+<li>Storage Unit Clearouts</li>
+</ul>
+<a class="cta-button" href="/contact.html">Book Moving</a>
+</section>
 </main>
-
 <script>
 function toggleMenu() {
   document.getElementById('navMenu').classList.toggle('active');
