--- a/public/thank-you.html
+++ b/public/thank-you.html
@@ -1,15 +1,16 @@
 <!-- File: /public/thank-you.html -->
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Thank You | Coastal Junk Removal</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/styles.css">
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
-  <script>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Thank You | Coastal Junk Removal</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<link href="/css/styles.css" rel="stylesheet"/>
+<!-- Google Analytics -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+<script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
@@ -18,8 +19,8 @@
       'send_to': 'G-XXXXXXXXXX/thank_you_form_submit'
     });
   </script>
-  <!-- Meta Pixel -->
-  <script>
+<!-- Meta Pixel -->
+<script>
     !function(f,b,e,v,n,t,s){
       if(f.fbq)return;n=f.fbq=function(){n.callMethod?
       n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -31,8 +32,8 @@
     fbq('init', 'XXXXXXXXXXXXXXX'); 
     fbq('track', 'Contact');
   </script>
-  <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=XXXXXXXXXXXXXXX&ev=PageView&noscript=1"/></noscript>
-  <style>
+<noscript><img height="1" src="https://www.facebook.com/tr?id=XXXXXXXXXXXXXXX&amp;ev=PageView&amp;noscript=1" style="display:none" width="1"/></noscript>
+<style>
     body {
       margin: 0;
       background: #000;
@@ -83,15 +84,17 @@
   </style>
 </head>
 <body>
-  <main>
-    <div>
-      <h1>Thank You!</h1>
-      <p>Your message has been received. We'll be in touch shortly.</p>
-      <a href="/index.html" class="cta-button">Back to Home</a>
-    </div>
-  </main>
-  <footer>
-    <p>&copy; 2024 Coastal Junk Removal. All rights reserved.</p>
-  </footer>
-</body>
+<main>
+<div>
+<h1>Thank You!</h1>
+<p>Your message has been received. We'll be in touch shortly.</p>
+<a class="cta-button" href="/index.html">Back to Home</a>
+</div>
+</main>
+<footer>
+<p>© 2024 Coastal Junk Removal. All rights reserved.</p>
+</footer>
+<script>function toggleMenu() {
+  document.getElementById('navMenu').classList.toggle('active');
+}</script></body>
 </html>
