--- a/public/contact.html
+++ b/public/contact.html
@@ -1,13 +1,14 @@
 <!-- File: /public/contact.html -->
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact | Coastal Junk Removal</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/css/styles.css" />
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Contact | Coastal Junk Removal</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<link href="/css/styles.css" rel="stylesheet"/>
+<style>
     body {
       margin: 0;
       background: #000;
@@ -145,49 +146,47 @@
   </style>
 </head>
 <body>
+
 <header class="navbar">
-  <div class="logo">Coastal Junk Removal</div>
-  <div class="hamburger" onclick="toggleMenu()">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-  <nav class="nav-links" id="navMenu">
-    <a href="/index.html">Home</a>
-    <a href="/junk-removal.html">Junk Removal</a>
-    <a href="/moving-services.html">Moving Services</a>
-    <a href="/contact.html">Contact</a>
-  </nav>
+<a class="logo" href="/index.html">
+<img alt="Coastal Junk Removal" src="/assets/logo.png" style="height:40px;"/>
+</a>
+<div class="hamburger" onclick="toggleMenu()">
+<span></span><span></span><span></span>
+</div>
+<nav class="nav-links" id="navMenu">
+<a href="/index.html">Home</a>
+<a href="/junk-removal.html">Junk Removal</a>
+<a href="/moving-services.html">Moving Services</a>
+<a href="/contact.html">Contact</a>
+</nav>
 </header>
 
 <section class="hero">
-  <h1>Contact Coastal Junk Removal</h1>
-  <p>Reach out for fast, professional service across Coastal Virginia.</p>
+<h1>Contact Coastal Junk Removal</h1>
+<p>Reach out for fast, professional service across Coastal Virginia.</p>
 </section>
-
 <main>
-  <form action="https://formsubmit.co/info@coastaljrva.com" method="POST">
-    <label>Name
-      <input type="text" name="name" required placeholder="Your Full Name">
-    </label>
-    <label>Email
-      <input type="email" name="email" required placeholder="you@example.com">
-    </label>
-    <label>Phone
-      <input type="tel" name="phone" required placeholder="(123) 456-7890">
-    </label>
-    <label>Message
-      <textarea name="message" rows="5" required placeholder="Tell us about your project or request..."></textarea>
-    </label>
-    <input type="hidden" name="_next" value="https://coastaljrva.com/thank-you.html">
-    <button type="submit" class="cta-button">Send Message</button>
-  </form>
+<form action="https://formsubmit.co/info@coastaljrva.com" method="POST">
+<label>Name
+      <input name="name" placeholder="Your Full Name" required="" type="text"/>
+</label>
+<label>Email
+      <input name="email" placeholder="you@example.com" required="" type="email"/>
+</label>
+<label>Phone
+      <input name="phone" placeholder="(123) 456-7890" required="" type="tel"/>
+</label>
+<label>Message
+      <textarea name="message" placeholder="Tell us about your project or request..." required="" rows="5"></textarea>
+</label>
+<input name="_next" type="hidden" value="https://coastaljrva.com/thank-you.html"/>
+<button class="cta-button" type="submit">Send Message</button>
+</form>
 </main>
-
 <footer>
-  <p>&copy; 2024 Coastal Junk Removal. All rights reserved.</p>
+<p>© 2024 Coastal Junk Removal. All rights reserved.</p>
 </footer>
-
 <script>
 function toggleMenu() {
   document.getElementById('navMenu').classList.toggle('active');
