--- a/public/junk-removal-gloucester.html
+++ b/public/junk-removal-gloucester.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <title>Luxury Junk Removal in Gloucester, VA | Coastal Junk Removal</title>
-  <meta name="description" content="Premium junk removal services in Gloucester, VA. Fast, discreet estate cleanouts, appliance hauling & garage cleanups. Book luxury junk removal today!">
-  <link rel="stylesheet" href="/css/styles.css">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta content="index, follow" name="robots"/>
+<title>Luxury Junk Removal in Gloucester, VA | Coastal Junk Removal</title>
+<meta content="Premium junk removal services in Gloucester, VA. Fast, discreet estate cleanouts, appliance hauling &amp; garage cleanups. Book luxury junk removal today!" name="description"/>
+<link href="/css/styles.css" rel="stylesheet"/>
 </head>
 <body>
-  <main class="service-page">
-    <section class="hero">
-      <h1>Luxury Junk Removal in Gloucester, VA</h1>
-      <p>Coastal Junk Removal proudly offers premium junk hauling services in Gloucester, VA. Our team provides white-glove junk removal for residential, commercial, and estate cleanout clients seeking privacy, precision, and professionalism.</p>
-
-      <h2>What We Remove</h2>
-      <ul>
-        <li>Estate Cleanouts</li>
-        <li>Garage, Attic & Basement Junk</li>
-        <li>Furniture & Appliance Hauling</li>
-        <li>Construction Debris</li>
-        <li>Commercial Junk & Office Cleanouts</li>
-      </ul>
-
-      <h2>Serving Gloucester Neighborhoods</h2>
-      <p>Hayes, Courthouse</p>
-
-      <h2>Frequently Asked Questions</h2>
-      <p><strong>Q:</strong> How fast can I schedule a junk removal appointment?<br><strong>A:</strong> We offer next-day and often same-day scheduling, depending on availability in your area.</p><p><strong>Q:</strong> Do you handle garage, attic, and basement cleanouts?<br><strong>A:</strong> Yes, we specialize in full-space cleanouts including garages, attics, basements, and more.</p><p><strong>Q:</strong> Do you donate or recycle items?<br><strong>A:</strong> We work with local charities and recycling centers to ensure usable items avoid the landfill.</p>
-
-      <a href="/contact.html" class="cta-button">Book Junk Removal</a>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2024 Coastal Junk Removal. Serving Gloucester, VA and surrounding communities.</p>
-  </footer>
-</body>
+<main class="service-page">
+<section class="hero">
+<h1>Luxury Junk Removal in Gloucester, VA</h1>
+<p>Coastal Junk Removal proudly offers premium junk hauling services in Gloucester, VA. Our team provides white-glove junk removal for residential, commercial, and estate cleanout clients seeking privacy, precision, and professionalism.</p>
+<h2>What We Remove</h2>
+<ul>
+<li>Estate Cleanouts</li>
+<li>Garage, Attic &amp; Basement Junk</li>
+<li>Furniture &amp; Appliance Hauling</li>
+<li>Construction Debris</li>
+<li>Commercial Junk &amp; Office Cleanouts</li>
+</ul>
+<h2>Serving Gloucester Neighborhoods</h2>
+<p>Hayes, Courthouse</p>
+<h2>Frequently Asked Questions</h2>
+<p><strong>Q:</strong> How fast can I schedule a junk removal appointment?<br/><strong>A:</strong> We offer next-day and often same-day scheduling, depending on availability in your area.</p><p><strong>Q:</strong> Do you handle garage, attic, and basement cleanouts?<br/><strong>A:</strong> Yes, we specialize in full-space cleanouts including garages, attics, basements, and more.</p><p><strong>Q:</strong> Do you donate or recycle items?<br/><strong>A:</strong> We work with local charities and recycling centers to ensure usable items avoid the landfill.</p>
+<a class="cta-button" href="/contact.html">Book Junk Removal</a>
+</section>
+</main>
+<footer>
+<p>© 2024 Coastal Junk Removal. Serving Gloucester, VA and surrounding communities.</p>
+</footer>
+<script>function toggleMenu() {
+  document.getElementById('navMenu').classList.toggle('active');
+}</script></body>
 </html>
