--- a/public/login.html
+++ b/public/login.html
@@ -1,12 +1,13 @@
 <!-- File: /public/login.html -->
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Login | Coastal Junk Removal</title>
-  <link rel="stylesheet" href="/css/styles.css">
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Admin Login | Coastal Junk Removal</title>
+<link href="/css/styles.css" rel="stylesheet"/>
+<style>
     .login-container {
       display: flex;
       flex-direction: column;
@@ -44,16 +45,15 @@
   </style>
 </head>
 <body>
-  <div class="login-container">
-    <form class="login-form" onsubmit="return handleLogin(event)">
-      <h2>Admin Login</h2>
-      <input type="text" id="username" placeholder="Username" required>
-      <input type="password" id="password" placeholder="Password" required>
-      <button type="submit">Login</button>
-    </form>
-  </div>
-
-  <script>
+<div class="login-container">
+<form class="login-form" onsubmit="return handleLogin(event)">
+<h2>Admin Login</h2>
+<input id="username" placeholder="Username" required="" type="text"/>
+<input id="password" placeholder="Password" required="" type="password"/>
+<button type="submit">Login</button>
+</form>
+</div>
+<script>
     function handleLogin(event) {
       event.preventDefault();
       const user = document.getElementById('username').value;
@@ -67,5 +67,7 @@
       }
     }
   </script>
-</body>
+<script>function toggleMenu() {
+  document.getElementById('navMenu').classList.toggle('active');
+}</script></body>
 </html>
