--- a/public/moving-services-norfolk.html
+++ b/public/moving-services-norfolk.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <title>Luxury Moving Services in Norfolk, VA | Coastal Junk Removal</title>
-  <meta name="description" content="Relocate in style with our luxury moving services in Norfolk, VA. Apartment moves, senior relocation & white-glove moving care. Get a custom quote now.">
-  <link rel="stylesheet" href="/css/styles.css">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta content="index, follow" name="robots"/>
+<title>Luxury Moving Services in Norfolk, VA | Coastal Junk Removal</title>
+<meta content="Relocate in style with our luxury moving services in Norfolk, VA. Apartment moves, senior relocation &amp; white-glove moving care. Get a custom quote now." name="description"/>
+<link href="/css/styles.css" rel="stylesheet"/>
 </head>
 <body>
-  <main class="service-page">
-    <section class="hero">
-      <h1>Luxury Moving Services in Norfolk, VA</h1>
-      <p>Coastal Junk Removal offers elite moving services in Norfolk, VA. We specialize in high-touch relocation for residential clients, seniors, and professionals seeking smooth, discreet, and reliable service.</p>
-
-      <h2>Our Moving Solutions</h2>
-      <ul>
-        <li>Apartment & Home Moving</li>
-        <li>Senior Relocations</li>
-        <li>Packing & Loading Assistance</li>
-        <li>Local Moves & Neighborhood Transfers</li>
-        <li>Furniture & Appliance Transportation</li>
-      </ul>
-
-      <h2>Neighborhoods We Move In</h2>
-      <p>Ghent, Ocean View, Larchmont</p>
-
-      <h2>Frequently Asked Questions</h2>
-      <p><strong>Q:</strong> What types of moving services do you offer?<br><strong>A:</strong> We provide residential moves, senior relocations, apartment moves, and office relocations.</p><p><strong>Q:</strong> Can you help with packing and loading?<br><strong>A:</strong> Yes, our team is trained to assist with careful packing, heavy lifting, and secure loading.</p><p><strong>Q:</strong> Do you move within the same city or long-distance?<br><strong>A:</strong> We primarily serve local moves within the region, including nearby cities and counties.</p>
-
-      <a href="/contact.html" class="cta-button">Book Moving Services</a>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2024 Coastal Junk Removal. Premium Moving in Norfolk, VA and nearby towns.</p>
-  </footer>
-</body>
+<main class="service-page">
+<section class="hero">
+<h1>Luxury Moving Services in Norfolk, VA</h1>
+<p>Coastal Junk Removal offers elite moving services in Norfolk, VA. We specialize in high-touch relocation for residential clients, seniors, and professionals seeking smooth, discreet, and reliable service.</p>
+<h2>Our Moving Solutions</h2>
+<ul>
+<li>Apartment &amp; Home Moving</li>
+<li>Senior Relocations</li>
+<li>Packing &amp; Loading Assistance</li>
+<li>Local Moves &amp; Neighborhood Transfers</li>
+<li>Furniture &amp; Appliance Transportation</li>
+</ul>
+<h2>Neighborhoods We Move In</h2>
+<p>Ghent, Ocean View, Larchmont</p>
+<h2>Frequently Asked Questions</h2>
+<p><strong>Q:</strong> What types of moving services do you offer?<br/><strong>A:</strong> We provide residential moves, senior relocations, apartment moves, and office relocations.</p><p><strong>Q:</strong> Can you help with packing and loading?<br/><strong>A:</strong> Yes, our team is trained to assist with careful packing, heavy lifting, and secure loading.</p><p><strong>Q:</strong> Do you move within the same city or long-distance?<br/><strong>A:</strong> We primarily serve local moves within the region, including nearby cities and counties.</p>
+<a class="cta-button" href="/contact.html">Book Moving Services</a>
+</section>
+</main>
+<footer>
+<p>© 2024 Coastal Junk Removal. Premium Moving in Norfolk, VA and nearby towns.</p>
+</footer>
+<script>function toggleMenu() {
+  document.getElementById('navMenu').classList.toggle('active');
+}</script></body>
 </html>
