--- a/public/service-areas.html
+++ b/public/service-areas.html
@@ -1,57 +1,58 @@
 <!-- File: service-areas.html -->
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="author" content="Coastal Junk Removal">
-  <title>Service Areas | Coastal Junk Removal</title>
-  <meta name="description" content="Explore the areas served by Coastal Junk Removal including Newport News, Hampton, Yorktown, and more. Fast and affordable junk removal near you.">
-  <link rel="stylesheet" href="css/styles.css">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta content="index, follow" name="robots"/>
+<meta content="Coastal Junk Removal" name="author"/>
+<title>Service Areas | Coastal Junk Removal</title>
+<meta content="Explore the areas served by Coastal Junk Removal including Newport News, Hampton, Yorktown, and more. Fast and affordable junk removal near you." name="description"/>
+<link href="/css/styles.css" rel="stylesheet"/>
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <a href="index.html"><img src="assets/logo.png" alt="Coastal Junk Removal Logo"></a>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="junk-removal.html">Junk Removal</a></li>
-        <li><a href="moving-services.html">Moving Services</a></li>
-        <li><a href="service-areas.html" class="active">Service Areas</a></li>
-        <li><a href="testimonials.html">Testimonials</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <main>
-    <section>
-      <h1>Areas We Serve</h1>
-      <p>Coastal Junk Removal proudly provides top-rated junk removal and moving services to the following cities and surrounding communities:</p>
-      <ul>
-        <li>Newport News</li>
-        <li>Hampton</li>
-        <li>Yorktown</li>
-        <li>Poquoson</li>
-        <li>Williamsburg</li>
-        <li>Gloucester</li>
-        <li>Smithfield</li>
-        <li>Carrollton</li>
-        <li>Suffolk</li>
-      </ul>
-      <p>If you're located nearby and not listed, please reach out — we’re happy to accommodate wherever we can!</p>
-    </section>
+<header class="navbar">
+<a class="logo" href="/index.html">
+<img alt="Coastal Junk Removal" src="/assets/logo.png" style="height:40px;"/>
+</a>
+<div class="hamburger" onclick="toggleMenu()">
+<span></span><span></span><span></span>
+</div>
+<nav class="nav-links" id="navMenu">
+<a href="/index.html">Home</a>
+<a href="/junk-removal.html">Junk Removal</a>
+<a href="/moving-services.html">Moving Services</a>
+<a href="/contact.html">Contact</a>
+</nav>
+</header>
 
-    <section>
-      <a href="contact.html" class="btn">Book a Pickup</a>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 Coastal Junk Removal. Serving greater Newport News with pride and professionalism.</p>
-  </footer>
-</body>
+<main>
+<section>
+<h1>Areas We Serve</h1>
+<p>Coastal Junk Removal proudly provides top-rated junk removal and moving services to the following cities and surrounding communities:</p>
+<ul>
+<li>Newport News</li>
+<li>Hampton</li>
+<li>Yorktown</li>
+<li>Poquoson</li>
+<li>Williamsburg</li>
+<li>Gloucester</li>
+<li>Smithfield</li>
+<li>Carrollton</li>
+<li>Suffolk</li>
+</ul>
+<p>If you're located nearby and not listed, please reach out — we’re happy to accommodate wherever we can!</p>
+</section>
+<section>
+<a class="btn" href="contact.html">Book a Pickup</a>
+</section>
+</main>
+<footer>
+<p>© 2024 Coastal Junk Removal. Serving greater Newport News with pride and professionalism.</p>
+</footer>
+<script>function toggleMenu() {
+  document.getElementById('navMenu').classList.toggle('active');
+}</script></body>
 </html>
