--- a/public/testimonials.html
+++ b/public/testimonials.html
@@ -1,66 +1,64 @@
 <!-- File: testimonials.html -->
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="author" content="Coastal Junk Removal">
-  <title>Customer Testimonials | Coastal Junk Removal</title>
-  <meta name="description" content="See what our customers say about Coastal Junk Removal in Newport News. Trusted for junk removal, moving, and cleanup services. Read verified reviews.">
-  <link rel="stylesheet" href="css/styles.css">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta content="index, follow" name="robots"/>
+<meta content="Coastal Junk Removal" name="author"/>
+<title>Customer Testimonials | Coastal Junk Removal</title>
+<meta content="See what our customers say about Coastal Junk Removal in Newport News. Trusted for junk removal, moving, and cleanup services. Read verified reviews." name="description"/>
+<link href="/css/styles.css" rel="stylesheet"/>
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <a href="index.html"><img src="assets/logo.png" alt="Coastal Junk Removal Logo"></a>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="junk-removal.html">Junk Removal</a></li>
-        <li><a href="moving-services.html">Moving Services</a></li>
-        <li><a href="service-areas.html">Service Areas</a></li>
-        <li><a href="testimonials.html" class="active">Testimonials</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <main>
-    <section>
-      <h1>What Our Customers Say</h1>
-      <p>We take pride in every job. Here’s what real clients say about their experience with Coastal Junk Removal:</p>
+<header class="navbar">
+<a class="logo" href="/index.html">
+<img alt="Coastal Junk Removal" src="/assets/logo.png" style="height:40px;"/>
+</a>
+<div class="hamburger" onclick="toggleMenu()">
+<span></span><span></span><span></span>
+</div>
+<nav class="nav-links" id="navMenu">
+<a href="/index.html">Home</a>
+<a href="/junk-removal.html">Junk Removal</a>
+<a href="/moving-services.html">Moving Services</a>
+<a href="/contact.html">Contact</a>
+</nav>
+</header>
 
-      <article class="testimonial">
-        <blockquote>
+<main>
+<section>
+<h1>What Our Customers Say</h1>
+<p>We take pride in every job. Here’s what real clients say about their experience with Coastal Junk Removal:</p>
+<article class="testimonial">
+<blockquote>
           "Amazing service! They showed up early, were super friendly, and got the job done fast. I’ll never use anyone else!"
         </blockquote>
-        <p>- Ashley T., Newport News</p>
-      </article>
-
-      <article class="testimonial">
-        <blockquote>
+<p>- Ashley T., Newport News</p>
+</article>
+<article class="testimonial">
+<blockquote>
           "Same-day pickup, great communication, and they even swept up after. Highly recommend!"
         </blockquote>
-        <p>- Jordan B., Hampton</p>
-      </article>
-
-      <article class="testimonial">
-        <blockquote>
+<p>- Jordan B., Hampton</p>
+</article>
+<article class="testimonial">
+<blockquote>
           "Great team. They helped move out heavy furniture from my attic without a single scratch. Worth every penny."
         </blockquote>
-        <p>- Chris M., Yorktown</p>
-      </article>
-
-      <div class="cta-center">
-        <a href="contact.html" class="btn">Book Your Pickup Today</a>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 Coastal Junk Removal. Rated #1 in Newport News for dependable junk and moving services.</p>
-  </footer>
-</body>
+<p>- Chris M., Yorktown</p>
+</article>
+<div class="cta-center">
+<a class="btn" href="contact.html">Book Your Pickup Today</a>
+</div>
+</section>
+</main>
+<footer>
+<p>© 2024 Coastal Junk Removal. Rated #1 in Newport News for dependable junk and moving services.</p>
+</footer>
+<script>function toggleMenu() {
+  document.getElementById('navMenu').classList.toggle('active');
+}</script></body>
 </html>
