--- a/public/trip-expenses.html
+++ b/public/trip-expenses.html
@@ -1,58 +1,60 @@
 <!-- File: trip-expenses.html -->
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trip Expenses | Coastal Junk Removal</title>
-  <link rel="stylesheet" href="css/styles.css">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Trip Expenses | Coastal Junk Removal</title>
+<link href="/css/styles.css" rel="stylesheet"/>
 </head>
 <body>
-  <main class="trip-expense-entry">
-    <header>
-      <h1>Log Trip Expenses</h1>
-      <a href="/admin.html">Back to Dashboard</a>
-    </header>
+<main class="trip-expense-entry">
 
-    <form action="/save-trip-expense" method="POST">
-      <fieldset>
-        <legend>Trip Details</legend>
+<header class="navbar">
+<a class="logo" href="/index.html">
+<img alt="Coastal Junk Removal" src="/assets/logo.png" style="height:40px;"/>
+</a>
+<div class="hamburger" onclick="toggleMenu()">
+<span></span><span></span><span></span>
+</div>
+<nav class="nav-links" id="navMenu">
+<a href="/index.html">Home</a>
+<a href="/junk-removal.html">Junk Removal</a>
+<a href="/moving-services.html">Moving Services</a>
+<a href="/contact.html">Contact</a>
+</nav>
+</header>
 
-        <label for="date">Date of Trip</label>
-        <input type="date" id="date" name="date" required>
-
-        <label for="miles">Miles Driven</label>
-        <input type="number" id="miles" name="miles" min="0" value="0" oninput="calculateTotal()">
-
-        <label for="fuelCost">Fuel Cost ($)</label>
-        <input type="number" id="fuelCost" name="fuelCost" step="0.01" value="0" oninput="calculateTotal()">
-
-        <label for="landfillTrips">Landfill Trips</label>
-        <input type="number" id="landfillTrips" name="landfillTrips" min="0" value="0" oninput="calculateTotal()">
-
-        <label for="maintenance">Maintenance Cost ($)</label>
-        <input type="number" id="maintenance" name="maintenance" step="0.01" value="0" oninput="calculateTotal()">
-
-        <label for="laborHours">Labor Hours</label>
-        <input type="number" id="laborHours" name="laborHours" min="0" step="0.5" value="0" oninput="calculateTotal()">
-
-        <label for="notes">Notes</label>
-        <textarea id="notes" name="notes" rows="4" placeholder="Optional notes about this trip..."></textarea>
-      </fieldset>
-
-      <fieldset>
-        <legend>Calculated Summary</legend>
-        <p><strong>Mileage Charge:</strong> $<span id="mileageCharge">0.00</span></p>
-        <p><strong>Landfill Fees:</strong> $<span id="landfillCharge">0.00</span></p>
-        <p><strong>Labor Cost (at $60/hr):</strong> $<span id="laborCharge">0.00</span></p>
-        <p><strong>Total Trip Cost:</strong> $<span id="totalCost">0.00</span></p>
-      </fieldset>
-
-      <button type="submit">Save Trip Expense</button>
-    </form>
-  </main>
-
-  <script>
+<form action="/save-trip-expense" method="POST">
+<fieldset>
+<legend>Trip Details</legend>
+<label for="date">Date of Trip</label>
+<input id="date" name="date" required="" type="date"/>
+<label for="miles">Miles Driven</label>
+<input id="miles" min="0" name="miles" oninput="calculateTotal()" type="number" value="0"/>
+<label for="fuelCost">Fuel Cost ($)</label>
+<input id="fuelCost" name="fuelCost" oninput="calculateTotal()" step="0.01" type="number" value="0"/>
+<label for="landfillTrips">Landfill Trips</label>
+<input id="landfillTrips" min="0" name="landfillTrips" oninput="calculateTotal()" type="number" value="0"/>
+<label for="maintenance">Maintenance Cost ($)</label>
+<input id="maintenance" name="maintenance" oninput="calculateTotal()" step="0.01" type="number" value="0"/>
+<label for="laborHours">Labor Hours</label>
+<input id="laborHours" min="0" name="laborHours" oninput="calculateTotal()" step="0.5" type="number" value="0"/>
+<label for="notes">Notes</label>
+<textarea id="notes" name="notes" placeholder="Optional notes about this trip..." rows="4"></textarea>
+</fieldset>
+<fieldset>
+<legend>Calculated Summary</legend>
+<p><strong>Mileage Charge:</strong> $<span id="mileageCharge">0.00</span></p>
+<p><strong>Landfill Fees:</strong> $<span id="landfillCharge">0.00</span></p>
+<p><strong>Labor Cost (at $60/hr):</strong> $<span id="laborCharge">0.00</span></p>
+<p><strong>Total Trip Cost:</strong> $<span id="totalCost">0.00</span></p>
+</fieldset>
+<button type="submit">Save Trip Expense</button>
+</form>
+</main>
+<script>
     function calculateTotal() {
       const miles = parseFloat(document.getElementById('miles').value) || 0;
       const fuel = parseFloat(document.getElementById('fuelCost').value) || 0;
@@ -74,5 +76,7 @@
 
     calculateTotal();
   </script>
-</body>
+<script>function toggleMenu() {
+  document.getElementById('navMenu').classList.toggle('active');
+}</script></body>
 </html>
